Include range.js when initializing the engine

Otherwise if one tries to use methods that return a range it results
in an error.

BUG: 456701